booking-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  labels:
    app: rent-car
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 31002
      protocol: TCP
      targetPort: 8080
  selector:
    app: rent-car
    tier: booking
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: booking-service
  labels:
    app: rent-car
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rent-car
        tier: booking
    spec:
      containers:
        - image: ziedyazidi/booking-service
          imagePullPolicy: Always
          name: booking-service
          ports:
            - containerPort: 8080
