catalog-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  labels:
    app: rent-car
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 31001
      protocol: TCP
      targetPort: 8080
  selector:
    app: rent-car
    tier: catalog
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: catalog-service
  labels:
    app: rent-car
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rent-car
        tier: catalog
    spec:
      containers:
        - image: ziedyazidi/catalog-service
          imagePullPolicy: Always
          name: catalog-service
          ports:
            - containerPort: 8080
